C:/Users/Ray Sim/Desktop/CS5131/CS_Project/CS5131+Project.ipynb

--- a/CS5131+Project.ipynb
+++ b/CS5131+Project.ipynb
@@ -23,6 +23,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "<a id='ToC'/>\n",
+    "On Jupyter<br>\n",
+    "1. <a href=#Importing>Importing</a><br>\n",
+    "2. <a href=#Functions>Functions</a><br>\n",
+    "3. <a href=#Autoencoders>Autoencoders</a><br>\n",
+    "4. <a href=#Training/Testing>Training/Testing</a><br>\n",
+    "On colab<br>\n",
+    "1. <a href=#scrollTo=eP-dRA9g4P0W&line=3&uniqifier=1>Importing</a><br>\n",
+    "2. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing\n",
+    "<a id = 'Importing'/>\n",
+    "<a href=#ToC>back</a><br>\n",
+    "<a href=#scrollTo=iSjP6Hfu3uFC&line=8&uniqifier=1>back(on colab)</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -47,8 +73,7 @@
    "metadata": {},
    "source": [
     "## Functions\n",
-    "<a id = 'ToC'/>\n",
-    "\n",
+    "<a id = 'Functions'/>\n",
     "<a href=#ToC>back</a><br>\n",
     "<a href=#scrollTo=iSjP6Hfu3uFC&line=8&uniqifier=1>back(on colab)</a>"
    ]
@@ -204,7 +229,8 @@
    "source": [
     "## Autoencoders\n",
     "<a id = 'Autoencoders'/>\n",
-    "<a href=#ToC>back</a>"
+    "<a href=#ToC>back</a><br>\n",
+    "<a href=#scrollTo=iSjP6Hfu3uFC&line=8&uniqifier=1>back(on colab)</a>"
    ]
   },
   {
@@ -780,7 +806,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training/Testing"
+    "## Training/Testing\n",
+    "<a id = 'Training/Testing'/>\n",
+    "<a href=#ToC>back</a><br>\n",
+    "<a href=#scrollTo=iSjP6Hfu3uFC&line=8&uniqifier=1>back(on colab)</a>"
    ]
   },
   {
