--- a/CS5131+Project.ipynb
+++ b/CS5131+Project.ipynb
@@ -28,6 +28,7 @@
    "source": [
     "## Table of Contents\n",
     "<a id='ToC'/>\n",
+    "<br>\n",
     "On Jupyter<br>\n",
     "1. <a href=#Importing>Importing</a><br>\n",
     "2. <a href=#Functions>Functions</a><br>\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
     "def split_songs(songLst, time_interval = 2, fs = 100):\n",
     "    thing_arr = []\n",
     "    for i in songLst:\n",
-    "        thing_arr.append(torch.tensor(split_song(i, time_interval = 1, fs = 100)).cuda().float())\n",
+    "        thing_arr.append(torch.tensor(split_song(i, time_interval = 1, fs = 100)).float())\n",
     "\n",
     "    train_arr, test_arr = train_test_split(thing_arr, test_size = 0.2, random_state = 43)\n",
     "    train_song, test_song = train_test_split(songLst, test_size = 0.2, random_state = 43)\n",
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def runModel(model, data_arr, n_epochs = 1000):    \n",
     "    \n",
     "    #initialisation\n",
-    "    encoder = model().cuda()\n",
+    "    encoder = model()\n",
     "    criterion = nn.MSELoss()\n",
     "    optimizer = torch.optim.Adam(encoder.parameters(), lr=0.001)\n",
     "    initial = time.time()\n",
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +373,11 @@
     "    def forward2(self, inpt):\n",
     "        encoded = F.relu(self.conv1(inpt))\n",
     "        encoded = F.relu(self.conv2(encoded))\n",
-    "        return encoded"
+    "        return encoded\n",
+    "    \n",
+    "    def forward3(self, encoded):\n",
+    "        decoded = F.relu(self.convT1(encoded))\n",
+    "        decoded = F"
    ]
   },
   {
@@ -384,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +401,21 @@
       "Importing Above & Beyond - We're All We Need (Original Mix) (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Above & Beyond feat. Alex Vargas - Blue Sky Action  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Adam F - Circles  (midi by Carlo Prato) (www.cprato.com).mid...\n",
-      "Importing Aether & Enzalla - Elysia's Heart  (midi by Carlo Prato) (www.cprato.com).mid...\n",
+      "Importing Aether & Enzalla - Elysia's Heart  (midi by Carlo Prato) (www.cprato.com).mid...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\pretty_midi\\pretty_midi.py:97: RuntimeWarning: Tempo, Key or Time signature change events found on non-zero tracks.  This is not a valid type 0 or type 1 MIDI file.  Tempo, Key or Time Signature may be wrong.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Importing Afrojack & David Guetta - Another Life  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Alan Walker - Alone  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Alan Walker - Faded (Original Mix) (midi by Carlo Prato) (www.cprato.com).mid...\n",
@@ -486,17 +505,17 @@
       "Importing Darren Porter - Human (Original Mix) (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Darren Porter - To Feel Again (Extended Mix) (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Dash Berlin ft. Luca Perra - Without The Sun (Midi by Carlo Prato) (www.cprato.com).mid...\n",
-      "Importing Dave Rodgers - Deja Vu- (midi by Carlo Prato) (www.cprato.com).mid...\n"
+      "Importing Dave Rodgers - Deja Vu- (midi by Carlo Prato) (www.cprato.com).mid...\n",
+      "Importing Dawn Golden - All I Want (Manila Kill Remix) (midi by Carlo Prato) (www.cprato.com).mid...\n",
+      "Importing DBSTF & Maurice West - Temple (Extended Mix) (Midi by Carlo Prato) (www.cprato.com).mid...\n",
+      "Importing deadmau5 - 2448  (midi by Carlo Prato) (www.cprato.com).mid...\n",
+      "Importing deadmau5 - 4ware (Extended Mix) (midi by Carlo Prato) (www.cprato.com).mid...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Importing Dawn Golden - All I Want (Manila Kill Remix) (midi by Carlo Prato) (www.cprato.com).mid...\n",
-      "Importing DBSTF & Maurice West - Temple (Extended Mix) (Midi by Carlo Prato) (www.cprato.com).mid...\n",
-      "Importing deadmau5 - 2448  (midi by Carlo Prato) (www.cprato.com).mid...\n",
-      "Importing deadmau5 - 4ware (Extended Mix) (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing deadmau5 - Cat Thruster  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing deadmau5 - Deus Ex Machina  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing deadmau5 - Glish  (midi by Carlo Prato) (www.cprato.com).mid...\n",
@@ -687,14 +706,14 @@
       "Importing Shawn Mendes - There's Nothing Holdin' Me Back  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Showtek vs. Technoboy & Tuneboy - Mellow  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing SICK INDIVIDUALS feat. jACQ - Take It On  (midi by Carlo Prato) (www.cprato.com).mid...\n",
-      "Importing Sigala - Sweet Lovin'  (midi by Carlo Prato) (www.cprato.com).mid...\n",
-      "Importing Sinsinati - Indios y Vaqueros (midi by Carlo Prato) (www.cprato.com).mid...\n"
+      "Importing Sigala - Sweet Lovin'  (midi by Carlo Prato) (www.cprato.com).mid...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Importing Sinsinati - Indios y Vaqueros (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing SlyphStorm - Morning Mist  (midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Snatt & Vix - Revive (Airborn Remix) (Midi by Carlo Prato) (www.cprato.com).mid...\n",
       "Importing Sonic Battle - Emerald Beach  (midi by Carlo Prato) (www.cprato.com).mid...\n",
@@ -765,7 +784,7 @@
        "348"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,23 +800,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Torch not compiled with CUDA enabled",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-9f5faf8b5987>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_arr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_arr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_song\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_song\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msplit_songs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msongLst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-12-b9de0902dd0a>\u001b[0m in \u001b[0;36msplit_songs\u001b[1;34m(songLst, time_interval, fs)\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0mthing_arr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msongLst\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m         \u001b[0mthing_arr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msplit_song\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtime_interval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[0mtrain_arr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_arr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthing_arr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m43\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\torch\\cuda\\__init__.py\u001b[0m in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    162\u001b[0m                 \"multiprocessing, you must use the 'spawn' start method\")\n\u001b[0;32m    163\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'_cuda_getDeviceCount'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 164\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Torch not compiled with CUDA enabled\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    165\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0m_cudart\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    166\u001b[0m             raise AssertionError(\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_arr, test_arr, train_song, test_song = split_songs(songLst)"
    ]
@@ -810,6 +815,27 @@
     "<a id = 'Training/Testing'/>\n",
     "<a href=#ToC>back</a><br>\n",
     "<a href=#scrollTo=iSjP6Hfu3uFC&line=8&uniqifier=1>back(on colab)</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "runModel() missing 1 required positional argument: 'data_arr'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-e64758589c50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrunModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTestEncoder3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: runModel() missing 1 required positional argument: 'data_arr'"
+     ]
+    }
+   ],
+   "source": [
+    "model3 = runModel(TestEncoder3, )"
    ]
   },
   {
